# zoom-python-client

./: .coveragerc  .env.sample  .flake8  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: codeql-analysis.yml  pypi-publish.yml  python-tests.yml  python.yml  testpypi-publish.yml
example/: get_meeting_livestream.py  get_microsoft_user_id_for_rooms.py  get_rooms.py  get_rooms_sensor_data.py  get_user.py  get_user_meetings.py  list_calendar_ressources.py  set_meeting_livestream.py  use_token_file.py
src/zoom_client/client_components/meeting_livestreams/: meeting_livestreams_component.py
src/zoom_client/client_components/users/: users_component.py
src/zoom_client/client_components/webinar_livestreams/: webinar_livestreams_component.py
src/zoom_client/zoom_auth_api/: zoom_auth_api_client.py
src/zoom_python_client/: api_client.py  zoom_api_client.py
src/zoom_python_client/client_components/meeting_livestreams/: meeting_livestreams_component.py
src/zoom_python_client/client_components/users/: users_component.py
tests/utils/: test_logger.py
tests/zoom_client/: base_test_case.py  test_api_client.py  test_client.py  test_zoom_api_client.py
tests/zoom_client/client_components/meeting_livestreams/: test_meeting_livestreams_component.py
tests/zoom_client/client_components/meetings/: test_meetings_component.py
tests/zoom_client/client_components/users/: test_users_component.py
tests/zoom_client/client_components/webinar_livestreams/: test_webinar_livestreams_component.py
tests/zoom_client/client_components/webinars/: test_webinars_component.py
tests/zoom_client/utils/: test_file_system.py
tests/zoom_client/zoom_auth_api/: test_zoom_auth_api_client.py
tests/zoom_python_client/: base_test_case.py  test_api_client.py  test_zoom_api_client.py
tests/zoom_python_client/client_components/calendars/: test_calendars_component.py
tests/zoom_python_client/client_components/meeting_livestreams/: test_meeting_livestreams_component.py
tests/zoom_python_client/client_components/meetings/: test_meetings_component.py
tests/zoom_python_client/client_components/rooms/: test_rooms_component.py
tests/zoom_python_client/client_components/users/: test_users_component.py
tests/zoom_python_client/client_components/webinar_livestreams/: test_webinar_livestreams_component.py
tests/zoom_python_client/client_components/webinars/: test_webinars_component.py
tests/zoom_python_client/utils/: test_file_system.py  test_typed_dict_parameters.py
tests/zoom_python_client/zoom_auth_api/: test_zoom_auth_api_client.py
zoom_client/: api_client.py  client.py  zoom_api_client.py  zoom_client_interface.py
zoom_client/client_components/meeting_livestreams/: meeting_livestreams_component.py
zoom_client/client_components/meetings/: meetings_component.py
zoom_client/client_components/webinar_livestreams/: webinar_livestreams_component.py
zoom_client/client_components/webinars/: webinars_component.py
zoom_client/utils/: logger.py
zoom_client/zoom_auth_api/: zoom_auth_api_client.py
zoom_python_client/: api_client.py  zoom_api_client.py  zoom_client_interface.py
zoom_python_client/client_components/calendars/: calendars_component.py
zoom_python_client/client_components/meeting_livestreams/: meeting_livestreams_component.py
zoom_python_client/client_components/meetings/: meetings_component.py
zoom_python_client/client_components/rooms/: rooms_component.py
zoom_python_client/client_components/users/: users_component.py
zoom_python_client/client_components/webinar_livestreams/: webinar_livestreams_component.py
zoom_python_client/client_components/webinars/: webinars_component.py
zoom_python_client/utils/: file_system.py  logger.py  typed_dict_parameters.py
zoom_python_client/zoom_auth_api/: zoom_auth_api_client.py
