[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom-python-client"
version = "0.0.3"
dependencies = ["python-dotenv>=0.21.0", "requests>=2.26.0"]
authors = [{ name = "Rene Fernandez", email = "rene.fernandez@cern.ch" }]
description = "Zoom API client for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPL3 License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black>=23.3.0",
  "flake8>=6.0.0",
  "isort>=5.10.1",
  "mypy>=1.2.0",
  "mypy-extensions>=1.0.0",
  "pre-commit>=2.15.0",
  "pytest>=7.1.3",
  "pytest-cov>=3.0.0",
  "responses>=0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/renefs/zoom-python-client"
"Bug Tracker" = "https://github.com/renefs/zoom-python-client/issues"

# [tool.setuptools]
# package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# where = ["src"]
# include = ["src"]
exclude = ["tests*", "example*", ".github*", ".git*", ".vscode*"]

[tool.isort]
profile = "black"

[tool.mypy]

no_strict_optional = true
ignore_missing_imports = true
files = "^(zoom_python_client/|tests/)"
