[tool.poetry]
name = "zoom-python-client"
version = "0.1.1"
authors = ["Rene Fernandez Sanchez <rene.fernandez@cern.ch>"]
maintainers = ["Rene Fernandez Sanchez <rene.fernandez@cern.ch>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
exclude = ["tests*", "example*", ".github*", ".git*", ".vscode*"]
description = "Zoom API client for Python using server to server tokens"
homepage = "https://github.com/cern-vc/zoom-python-client"
keywords = ["zoom", "api"]
license = "MIT"
packages = [{ include = "zoom_python_client" }]
readme = "README.md"
repository = "https://github.com/cern-vc/zoom-python-client"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21"
requests = "^2.23"
typing-extensions = "^4.3"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.10.1"
pre-commit = "2.15.0"
mypy = "1.2.0"
mypy-extensions = "1.0.0"
pytest = "7.1.3"
pytest-cov = "3.0.0"
responses = "0.17.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cern-vc/zoom-python-client/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]

no_strict_optional = true
ignore_missing_imports = true
files = "^(zoom_python_client/|tests/)"
