[metadata]
name = zoom-python-client
version = 0.0.1
author = Rene Fernandez
author_email = author@example.com
description = Zoom API client for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = zoom_client
packages = find:
python_requires = >=3.9

[options.packages.find]
where = zoom_client